--- a/_teaching/2017.md
+++ b/_teaching/2017.md
@@ -1,11 +1,11 @@
 ---
-title: "Teaching experience 1"
+title: "Lecturer"
 collection: teaching
 type: "Undergraduate course"
-permalink: /teaching/2014-spring-teaching-1
-venue: "University 1, Department"
-date: 2014-01-01
-location: "City, Country"
+permalink: /teaching/universitedemontreal
+venue: "Université de Montréal, Département de linguistique"
+date: 2017-01-01
+location: "Montreal, Canada"
 ---
 
 This is a description of a teaching experience. You can use markdown like any other post.
