update to reflect overall experience

--- a/_teaching/2017.md
+++ b/_teaching/2017.md
@@ -8,13 +8,9 @@ date: 2017-01-01
 location: "Montreal, Canada"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+I have taught several undegraduate courses at the Linguistics department of Université de Montréal while completing my PhD. These include the following courses:
+- *Introduction to French syntax*
+- *Advanced syntax*
+- *Introduction to French morphology*
 
-Heading 1
-======
-
-Heading 2
-======
-
-Heading 3
-======
+This semester in Leiden, I taught the *Introduction to French syntax* course to students in the French BA program. Next semester, I'll be teaching various classes including an introductory course to French morphology in addition to language courses (*Grammaire et vocabulaire*) and a couple courses on Francophonie.
