Update and rename post-1_kisa_yo_pe.md to 2024-03-09-blog-post-1.md
Rename + adjustments (title, tags, permalink)

--- a/_posts/2024-03-09-blog-post-1.md
+++ b/_posts/2024-03-09-blog-post-1.md
@@ -1,7 +1,11 @@
 ---
-title: Kisa yo pè a?
-date: 2024-03-10
-permalink: /posts/2024/08/blog-post-1
+title: 'Kisa yo pè a?'
+date: 2024-03-09
+permalink: /posts/2024/03/blog-post-1/
+tags:
+  - speech
+  - international_mother_language_day
+  - Leiden
 ---
 
 # Kisa yo pè a? `What are they afraid of?'
@@ -26,3 +30,4 @@ After slavery was done, it was superseded by the colonial system. This was a sys
 But, if you really think hard about it, can we really blame the Creole speakers for this situation? Their choice was a rational one. Under the present economic system, not all languages have the same worth. In the Martinican case, it is French which has the greater worth. It is the language which offers the best work opportunities. Therefore, what we need to understand is why this system does not recognize the value of all languages. Careful inquiry shows that it is the same as before. They are afraid. Afraid of losing their grip on power as in the days of slavery.
 Today, colonialism is supposedly done in Martinique, but not much has changed. Less than a year ago, the local authorities decided to grant Martinican Creole official status. When this occurred, the first thing that happened is that some of the local bourgeoisie fought against this decision, claiming that only the economy mattered. On top of that, the French government took legal action against this decision on the grounds that it violated the French Constitution. So it would appear that not much has changed since the days of slavery. To this day, they, be it the local bourgeoisie or the French government, are still afraid of Creole gaining ground, because it would also mean the empowerment of its speakers. To this day, then, they are still afraid of diversity, linguistic or otherwise.
 In fact, what is happening in the Martinique is happening all over the world. We live on the foundation of a colonial system which still has some life in it. Today, there are people who are still afraid of diversity, linguistic or otherwise. But, if we are gathered today to celebrate the International Mother Language Day, I believe that it is because we are no longer afraid of diversity. And I also believe that the appreciation of linguistic diversity is the first step on a journey toward a fairer world. And that is something that we should not be afraid of.
+
